Add discussion on fat-client applications
As per suggestion from Inah, I have included a small discussion on how
the Fat-Client model 'interacts' with the SAFE Network. I have tied that
into the discussion on the serverless model as the two are not mutally
exclusive.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -45,6 +45,7 @@ In my opinion, the right to liberty and the unobstructed access to information i
 The SAFE Network is an 'internet' which is impossible to block or orchestrate what content can be accessed without blocking access to the entire thing. A network that is built from the ground up to protect the free access to data, working autonomously and without judgement on what information is being stored and shared. By hosting archives/copies of websites such as Wikipedia and Wikispecies on the SAFE Network, it could allow people from all over the world to access content that they haven't before. More importantly for some people, for them to be able to access the content without their governments being able to detect what they are looking at.
 
 \chapter{The SAFE Network}
+\label{ch:thesafenetwork}
 
 Decentralisation of data is the core benefit of the SAFE Network. As with many things in life, once someone has ownership or control of something they can either use that position of power for good purposes or for less desirable ones. The internet as it exists today is very fragile in this regard. When you upload a file to Dropbox or OneDrive, where does this file exist? Well that file exists solely on the servers that those organisations have control over. Once an organisation has data they can do with it what they please, acting within the bounds of overcomplicated privacy polices to manage your data. Not only does this incur the obvious privacy infringements (which we will not cover cover too much within this paper), but it can lead someone into the false sense of security that their data is safe. If for instance, someone managed to hack Dropbox or there was a catastrophic failure at the datacenter, who is to say that your data would be safe? That would depend upon a lot of factors such as: do they keep backups, do you yourself have a local copy of the file etc. On a much larger scale companies like Amazon provide AWS, an enterprise grade cloud-computing platform. If AWS were to fail, or be targeted, many of the worlds biggest websites would cease to function. This is because this computational power, data is centralised. It is not necessarily an \textit{easy} target, but it is a single identifiable piece of the equation that if removed, causes the whole thing to collapse. This \textit{problem} is what the SAFE Network means to answer and is a question I will be exploring throughout this paper.
 
@@ -85,6 +86,12 @@ At a high level, the only purpose a \textit{vault} serves is to store and serve 
 The way the SAFE Network operates forces the \textit{serverless architecture} architecture to be used (unless you merely use the SAFE Network as a component in your stack). This introduces challenges in that it is a new way of thinking about how to design websites and applications. Instead of complex servers, you almost entirely erase this concern from your development. You don't really need to consider how your apps data will be served, just how you go about accessing/storing it. Instead of designing websites the \textit{traditional} way, you develop them like you would a \textit{fat-client}. Websites will become heavier, requiring more care and optimisations. Messy and slow JS is abundant in the internet today, mostly due to the abundance of computing power that exists. Why spend time optimising when you can throw more CPU and RAM at it? This hap-hazard way of thinking cannot really exist for \textit{serverless architecture} websites or users will not have a great experience. An avenue that I think will become popular within the SAFE Network developer community is Web Assembly. 
 
 Web Assembly is an assembly-like language that you can compile C, C++, Rust, etc, to and then run inside web browsers. It allows you to write code in high-level languages (that aren't interpreted like JS) and then serve it to users such that the code runs with \textit{near native} performance. This has big implications for the internet as a whole, not just the SAFE Network. A technology like Web Assembly could therefore be extremely useful when building websites that use the \textit{serverless architecture} model. It can give developers access to languages and frameworks to build websites that just weren't available before. As it promises near-native performance, it could be a great tool with which to build rich websites that aren't clunky and slow. Websites that run nearly as fast as desktop applications will therefore be possible.
+
+\section{A Return to Fat Client Applications}
+
+At a high-level, a \textit{Fat Client} is a computer (application) that can perform operations and tasks without relying on a central \textit{server}. A Fat Client may still need to make periodic connections to a server but the vast majority of its functionality can be performed without \textit{chatter} with the server. The concept of a Fat Client is juxtaposed to that of a Thin Client. Traditionally a Thin Client was a lightweight computer that relied heavily on a server to have any sort of utility. They would be able to perform some tasks locally but the vast majority would require a constant connection to a server. The traditional model of the internet, an overwhelmingly client-server based structure, has encouraged the growth of the Thin Client model. Historically this approach does make sense, computers were expensive and if you could centralise the required computational power you could reduce costs. In todays world however, computing power is fast and readily available. As discussed previously, this computational power (for the most part) goes to waste. Applications (specifically internet browsers) are acting as Thin Clients for content. Although not all Fat Clients follow the \textit{serverless architectural model}, applications that are designed to be \textit{serverless} are inherently Fat Clients. Hence because of the points mentioned previously, the SAFE Network encourages (almost requires) the Fat Client style of architecture.
+
+This has vast implications for how applications should be designed for the SAFE Network and indeed influenced the choices I made for SAFE Wiki. Not only does one have to follow the design principles of the \textit{serverless architectural model}, but also that of the Fat Client. As Web Technologies grow, mature and develop it brings about new possibilities for how Fat Client applications can be used by end users. Instead of having to download applications to your device, new technologies allow rich \textit{serverless fat client} applications to be built and delivered through the web. A user simply needs to browse the internet as they already do instead of changing it to a model where they would have to download an app for Facebook, Twitter, YouTube etc. This style of \textit{content delivery} was not possible before, Web Technologies were not mature enough to support such rich experiences without relying heavily on server side processing. Hence I view the advent of new Web Technologies, such as Web Assembly that was mentioned above, to be an enabler in the success of the SAFE Network.
 
 \section{Architecture of the SAFE Network}
 
@@ -139,7 +146,7 @@ Ownership of data is very important. With verifiable ownership comes many avenue
 
 \section{Kiwix}
 
-Kiwix was first launched in 2007 as a way to browse the internet \textit{offline}. It achieves this through the use of ZIM files which are suitable for storing most HTML based content. One of the primary goals of Kiwix is to allow users to browse Wikipedia, \textit{"the sum of all human knowledge"}, offline. Whether this be in the middle of the ocean, deepest Africa or even inside North Korea. Since the initial launch, different versions of the software have been released. Different versions support many different platforms, including: iOS, Android, Windows Phone, FireFoxOS, macOS, Windows and Linux. With such a fantastic history behind the project I saw Kiwix as the natural foundation to build my application on.
+Kiwix was first launched in 2007 as a way to browse the internet \textit{offline}. It achieves this through the use of ZIM files which are suitable for storing most HTML based content. One of the primary goals of Kiwix is to allow users to browse Wikipedia, \textit{"the sum of all human knowledge"}, offline. Whether this be in the middle of the ocean, deepest Africa or even inside North Korea. Since the initial launch, different versions of the software have been released. Different versions support many different platforms, including: iOS, Android, Windows Phone, FireFoxOS, macOS, Windows and Linux. With such a fantastic history behind the project I saw Kiwix as the natural foundation to build my application on. Kiwix is inherently a \textit{Fat Client} style of application. It does not rely on a network connection as that is the whole point of its existence. Hence building upon an already \textit{Fat Client} application made perfect sense, considering the points made in Chapter \ref{ch:thesafenetwork}. SAFE Wiki would do all the processing/reading of the file locally, using the SAFE Network only as a storage medium for the ZIM files.
 
 Simply, Kiwix provides the means to browse the content within ZIM files. A user opens up the app and then through a file explorer (or other means) selects the target ZIM file. Kiwix then presents the user with an almost \textit{web-browser like} experience. With resources like Wikipedia it looks uncannily like the \textit{real} thing. With the ability to follow links around the website (ZIM file) and search for pages. You can see what the London page of a Wikivoyage ZIM file looks like in \textit{Figure \ref{fig:kiwix-firefox}}.
 
@@ -174,6 +181,12 @@ The combination of Kiwix and the SAFE Network makes total sense within this cont
 Electron allows you to "Build cross platform desktop apps with JavaScript, HTML, and CSS". Being able to produce an application that was cross platform was very important to me. The SAFE Network is not platform specific so SAFE Wiki shouldn't be either. As Kiwix JS is built upon web-technologies, Electron seamed like the obvious answer as to how to pull Kiwix JS outside of the web browser environment. Under the hood, Electron combines \textit{Node.js} and \textit{Chromium} into a single environment that can be deployed to the three main platforms: Windows, Linux and macOS. As there exists a \textit{Node.js API} for the SAFE Network this meant that a single application could be built. A single application that could handle both the uploading and deletion of ZIM files on the network and also the browsing of them. The decision not to use the \textit{Web API} to make SAFE Wiki was born out of the requirement of file uploading. To facilitate the upload of large files, (The ZIM for Wikipedia with images is \textgreater 70GB) I really needed to build a desktop application. 
 
 Electron, and indeed Javascript, was very much a new world to me. Beyond simple web development I really haven't done anything note worthy in Javascript. Making Kiwix JS run as an Electron application was hence quite a challenge. After a couple of months of work though I managed to get it running. It was a case of 'completely broken' then one fix lead to 'completely working'. What was now SAFE Wiki, could browse ZIM files from local storage and maintained all the functionality of Kiwix JS.
+
+\chapter{Evaluation}
+
+\chapter{Conclusion}
+
+\subsection{Future Work}
 
 \printbibliography
 
