Add some references
Added some basic references to Chapter 2 of the report. Much more still
needed though!

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,12 +1,83 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for David Andrew Brown at 2018-01-16 14:10:39 +0000 
+%% Created for David Andrew Brown at 2018-03-18 19:19:01 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{bittorrent-usage,
+	Author = {\relax{Palo Alto Networks}},
+	Date-Added = {2018-03-18 19:09:02 +0000},
+	Date-Modified = {2018-03-18 19:15:53 +0000},
+	Lastchecked = {2018-03-18},
+	Title = {Application Usage \& Threat Report},
+	Url = {http://researchcenter.paloaltonetworks.com/app-usage-risk-report-visualization/#},
+	Urldate = {2018-03-18}}
+
+@webpage{netflix,
+	Date-Added = {2018-03-18 18:57:39 +0000},
+	Date-Modified = {2018-03-18 19:18:23 +0000},
+	Lastchecked = {2018-03-18},
+	Month = {March},
+	Url = {https://www.netflix.com/},
+	Year = {2018}}
+
+@misc{dark-web,
+	Author = {Andy Greenberg},
+	Date-Added = {2018-03-18 18:54:07 +0000},
+	Date-Modified = {2018-03-18 18:56:51 +0000},
+	Month = {November},
+	Title = {Hacker Lexicon: What Is the Dark Web?},
+	Url = {https://www.wired.com/2014/11/hacker-lexicon-whats-dark-web/},
+	Urldate = {2018-03-18},
+	Year = {2014}}
+
+@webpage{tor,
+	Date-Added = {2018-03-18 18:52:42 +0000},
+	Date-Modified = {2018-03-18 18:52:56 +0000},
+	Lastchecked = {2018-01-16},
+	Month = {January},
+	Url = {https://www.torproject.org/},
+	Year = {2018}}
+
+@webpage{onedrive,
+	Date-Added = {2018-03-18 18:42:22 +0000},
+	Date-Modified = {2018-03-18 18:42:46 +0000},
+	Lastchecked = {2018-03-18},
+	Month = {January},
+	Url = {https://onedrive.live.com/about/en-gb/},
+	Year = {2018},
+	Bdsk-Url-1 = {https://onedrive.live.com/about/en-gb/}}
+
+@webpage{dropbox,
+	Date-Added = {2018-03-18 18:41:36 +0000},
+	Date-Modified = {2018-03-18 18:42:02 +0000},
+	Lastchecked = {2018-03-18},
+	Month = {January},
+	Url = {https://www.dropbox.com/},
+	Year = {2018},
+	Bdsk-Url-1 = {https://www.dropbox.com/}}
+
+@webpage{zim,
+	Date-Added = {2018-03-18 17:45:56 +0000},
+	Date-Modified = {2018-03-18 17:46:20 +0000},
+	Lastchecked = {2018-01-16},
+	Month = {January},
+	Url = {http://www.openzim.org/wiki/OpenZIM},
+	Year = {2018},
+	Bdsk-Url-1 = {http://www.openzim.org/wiki/OpenZIM}}
+
+@webpage{amazon-aws,
+	Date-Added = {2018-03-18 17:43:18 +0000},
+	Date-Modified = {2018-03-18 17:43:37 +0000},
+	Lastchecked = {2018-03-18},
+	Month = {March},
+	Url = {https://aws.amazon.com/},
+	Year = {2018},
+	Bdsk-Url-1 = {https://aws.amazon.com/}}
 
 @electronic{turkey,
 	Author = {BBC},
@@ -16,7 +87,8 @@
 	Title = {Turkish authorities block Wikipedia without giving reason},
 	Url = {http://www.bbc.com/news/world-europe-39754909},
 	Urldate = {2018-01-16},
-	Year = {2017}}
+	Year = {2017},
+	Bdsk-Url-1 = {http://www.bbc.com/news/world-europe-39754909}}
 
 @electronic{north-korean-media,
 	Author = {Chico Harlan},
@@ -39,40 +111,43 @@
 	Year = {2018},
 	Bdsk-Url-1 = {https://www.ushmm.org/wlc/en/article.php?ModuleId=10005852}}
 
-@electronic{autonomous-data-networks,
+@misc{autonomous-data-networks,
 	Author = {Nick Lambert},
 	Date-Added = {2018-01-16 13:15:33 +0000},
-	Date-Modified = {2018-01-16 13:17:33 +0000},
+	Date-Modified = {2018-03-18 18:06:35 +0000},
+	Month = {October},
 	Title = {Autonomous Data Networks and Why The World Needs Them},
 	Url = {https://blog.maidsafe.net/2017/10/07/autonomous-data-networks-and-why-the-world-needs-them/},
 	Urldate = {2018-01-16},
+	Year = {2017},
 	Bdsk-Url-1 = {https://blog.maidsafe.net/2017/10/07/autonomous-data-networks-and-why-the-world-needs-them/}}
 
-@electronic{zim,
-	Author = {Wikimedia-CH},
-	Date-Added = {2018-01-16 12:23:47 +0000},
-	Date-Modified = {2018-01-16 12:26:49 +0000},
-	Url = {http://www.openzim.org/wiki/OpenZIM},
-	Urldate = {2018-01-16},
-	Year = {2018},
-	Bdsk-Url-1 = {http://www.openzim.org/wiki/OpenZIM}}
-
-@electronic{safenetwork,
-	Author = {Maidsafe},
+@webpage{safenetwork,
 	Date-Added = {2018-01-16 12:21:59 +0000},
-	Date-Modified = {2018-01-16 12:22:35 +0000},
-	Title = {Secure Access For Everyone},
+	Date-Modified = {2018-03-18 18:10:28 +0000},
+	Lastchecked = {2018-01-16},
+	Month = {January},
 	Url = {https://safenetwork.org/},
-	Urldate = {2018-01-16},
 	Year = {2018},
 	Bdsk-Url-1 = {https://safenetwork.org/}}
 
-@electronic{maidsafe,
-	Author = {Maidsafe},
+@webpage{maidsafe,
 	Date-Added = {2018-01-16 12:17:18 +0000},
-	Date-Modified = {2018-01-16 12:21:02 +0000},
-	Title = {The World's First Autonomous Data Network},
+	Date-Modified = {2018-03-18 18:11:25 +0000},
+	Lastchecked = {2018-01-16},
+	Month = {January},
 	Url = {https://maidsafe.net/},
-	Urldate = {2018-01-16},
 	Year = {2018},
 	Bdsk-Url-1 = {https://maidsafe.net/}}
+
+@techreport{lambert2015safecoin,
+	Author = {Lambert, Nick and Ma, Qi and Irvine, David},
+	Institution = {Maidsafe, Tech. Rep},
+	Title = {Safecoin: The Decentralised Network Token},
+	Year = {2015}}
+
+@misc{cohen2008bittorrent,
+	Author = {Cohen, Bram},
+	Publisher = {BITTORRENT},
+	Title = {The BitTorrent protocol specification},
+	Year = {2008}}
