Work on SAFE Wiki chapter
This commit adds a lot of content into Chapter 4, bringing in images to
aid the user in understanding how the application operates.

Discussion on DataMaps is an important part of this chapter, further
work could be done on clarifying how that side of things operates I
think.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,12 +1,73 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for David Andrew Brown at 2018-03-18 19:19:01 +0000 
+%% Created for David Andrew Brown at 2018-03-19 15:09:16 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{web-hosting-manager,
+	Date-Added = {2018-03-19 15:08:18 +0000},
+	Date-Modified = {2018-03-19 15:08:38 +0000},
+	Lastchecked = {2018-03-19},
+	Month = {01},
+	Url = {https://github.com/maidsafe/safe_examples/tree/master/web_hosting_manager},
+	Year = {2018}}
+
+@webpage{example-apps,
+	Date-Added = {2018-03-19 15:07:57 +0000},
+	Date-Modified = {2018-03-19 15:08:14 +0000},
+	Lastchecked = {2018-03-19},
+	Month = {03},
+	Url = {https://github.com/maidsafe/safe_examples},
+	Year = {2018}}
+
+@webpage{uri-scheme-ubuntu,
+	Date-Added = {2018-03-19 11:17:18 +0000},
+	Date-Modified = {2018-03-19 11:17:48 +0000},
+	Lastchecked = {2018-03-19},
+	Month = {02},
+	Url = {https://forum.safedev.org/t/uri-scheme-registration-on-ubuntu-linux/1438},
+	Year = {2018},
+	Bdsk-Url-1 = {https://forum.safedev.org/t/uri-scheme-registration-on-ubuntu-linux/1438}}
+
+@webpage{safe-app-base-forummacfix,
+	Date-Added = {2018-03-19 11:00:14 +0000},
+	Date-Modified = {2018-03-19 11:02:37 +0000},
+	Lastchecked = {2018-03-19},
+	Month = {12},
+	Url = {https://forum.safedev.org/t/sample-safe-electron-app-doesnt-work-on-macos/1213?source_topic_id=1438},
+	Year = {2017},
+	Bdsk-Url-1 = {https://forum.safedev.org/t/sample-safe-electron-app-doesnt-work-on-macos/1213?source_topic_id=1438}}
+
+@webpage{electron-quick-start,
+	Date-Added = {2018-03-19 10:53:11 +0000},
+	Date-Modified = {2018-03-19 10:53:32 +0000},
+	Lastchecked = {2018-03-119},
+	Month = {March},
+	Url = {https://electronjs.org/docs/tutorial/quick-start},
+	Year = {2018},
+	Bdsk-Url-1 = {https://electronjs.org/docs/tutorial/quick-start}}
+
+@webpage{safe-app-base-fix,
+	Date-Added = {2018-03-19 10:51:01 +0000},
+	Date-Modified = {2018-03-19 11:01:56 +0000},
+	Lastchecked = {2018-03-18},
+	Month = {12},
+	Url = {https://github.com/hunterlester/safe-app-base/commit/66563fe8d8a5438714fc224f168252615b5a479f},
+	Year = {2017},
+	Bdsk-Url-1 = {https://github.com/hunterlester/safe-app-base/commit/66563fe8d8a5438714fc224f168252615b5a479f}}
+
+@webpage{safe-app-base,
+	Date-Added = {2018-03-19 10:50:21 +0000},
+	Date-Modified = {2018-03-19 10:50:38 +0000},
+	Lastchecked = {2018-03-18},
+	Month = {March},
+	Url = {https://github.com/hunterlester/safe-app-base},
+	Year = {2018},
+	Bdsk-Url-1 = {https://github.com/hunterlester/safe-app-base}}
 
 @webpage{bittorrent-usage,
 	Author = {\relax{Palo Alto Networks}},
@@ -15,7 +76,8 @@
 	Lastchecked = {2018-03-18},
 	Title = {Application Usage \& Threat Report},
 	Url = {http://researchcenter.paloaltonetworks.com/app-usage-risk-report-visualization/#},
-	Urldate = {2018-03-18}}
+	Urldate = {2018-03-18},
+	Bdsk-Url-1 = {http://researchcenter.paloaltonetworks.com/app-usage-risk-report-visualization/#}}
 
 @webpage{netflix,
 	Date-Added = {2018-03-18 18:57:39 +0000},
@@ -23,7 +85,8 @@
 	Lastchecked = {2018-03-18},
 	Month = {March},
 	Url = {https://www.netflix.com/},
-	Year = {2018}}
+	Year = {2018},
+	Bdsk-Url-1 = {https://www.netflix.com/}}
 
 @misc{dark-web,
 	Author = {Andy Greenberg},
@@ -33,7 +96,8 @@
 	Title = {Hacker Lexicon: What Is the Dark Web?},
 	Url = {https://www.wired.com/2014/11/hacker-lexicon-whats-dark-web/},
 	Urldate = {2018-03-18},
-	Year = {2014}}
+	Year = {2014},
+	Bdsk-Url-1 = {https://www.wired.com/2014/11/hacker-lexicon-whats-dark-web/}}
 
 @webpage{tor,
 	Date-Added = {2018-03-18 18:52:42 +0000},
@@ -41,7 +105,8 @@
 	Lastchecked = {2018-01-16},
 	Month = {January},
 	Url = {https://www.torproject.org/},
-	Year = {2018}}
+	Year = {2018},
+	Bdsk-Url-1 = {https://www.torproject.org/}}
 
 @webpage{onedrive,
 	Date-Added = {2018-03-18 18:42:22 +0000},
